hotgrid overflow fix

--- a/less/custom/theme-extras.less
+++ b/less/custom/theme-extras.less
@@ -755,6 +755,11 @@ body{
     overflow-y: scroll;
     height: 25vw;
 }
+// hotgrid overflow fix
+.notify.hotgrid .notify-popup-content-inner .hotgrid-popup-inner {
+    overflow-y: scroll;
+    height: 25vw;
+}
 
 
 
